# metlink

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  pyproject.toml  services.js  services.json
data/: services.json  stops.json
data/service-1/: 3000-3010.geojson  3000-3451.geojson  3010-3040.geojson  3010-3279.geojson  3010-3297.geojson  3050-3080.geojson  3080-3081.geojson  3081-3252-2.geojson  3081-3252.geojson  3081-5000.geojson  3081-5516.geojson  3252-5516.geojson  3279-3080.geojson  3297-3080.geojson  3451-3081.geojson  5000-5016.geojson  5000-6158.geojson  5016-3000.geojson  5516-5016.geojson  5516-6014.geojson  5516-6158.geojson  6014-6055-2.geojson  6014-6055.geojson  6055-6158.geojson  7158-5000.geojson  7158-5516.geojson  routes.geojson  routes.json  service.geojson  service.json
data/service-110/: 8573-9000.geojson  8579-9605.geojson  8580-9000.geojson  9000-8579.geojson  9000-9576.geojson  9576-8579-2.geojson  9576-8579.geojson  9605-8573.geojson  9605-8580.geojson  routes.geojson  routes.json  service.geojson  service.json
data/service-111/: 8504-8580.geojson  8511-8504.geojson  8579-8511.geojson  routes.geojson  routes.json  service.geojson  service.json  timetables.json
data/service-112/: 8579-9627.geojson  8627-8580.geojson  routes.geojson  routes.json  service.geojson  service.json  timetables.json
data/service-113/: 8519-9514.geojson  8573-8519.geojson  8573-8573.geojson  8573-8580.geojson  8580-8519.geojson  9514-8573-2.geojson  9514-8573.geojson  9514-9573-2.geojson  9514-9573.geojson  9573-8573.geojson  9573-8580.geojson  9573-9576.geojson  9576-8580-2.geojson  9576-8580.geojson  routes.geojson  routes.json  service.geojson  service.json  timetables.json
data/service-114/: 8580-9525.geojson  9525-8580.geojson  routes.geojson  routes.json  service.geojson  service.json  timetables.json
data/service-115/: 8416-9407.geojson  8580-8416.geojson  8580-9401.geojson  8580-9416.geojson  9401-9407.geojson  9407-8580.geojson  9416-9407.geojson  routes.geojson  routes.json  service.geojson  service.json  timetables.json
data/service-12/: 6025-7098.geojson  6025-7099.geojson  6224-7098.geojson  6224-7099.geojson  6746-6025.geojson  6746-6224.geojson  7026-7746.geojson  7027-6008.geojson  7027-7026.geojson  7027-7224.geojson  7098-7027.geojson  7099-7027.geojson  7099-7224.geojson  7218-6025.geojson  7218-6224.geojson  7224-6008.geojson  routes.geojson  routes.json  service.geojson  service.json  timetables.json
data/service-120/: 8115-8152.geojson  8377-8115.geojson  9115-8377.geojson  9197-9115.geojson  routes.geojson  routes.json  service.geojson  service.json
data/service-121/: 8310-9323.geojson  8310-9366.geojson  8323-8310.geojson  8323-8364.geojson  (+24 more)
datatypes/: Cargo.toml
datatypes/src/: api.rs  import.rs  internal.rs  main.rs  py_data.rs  route_resolver.rs  utils.rs
datatypes/src/api/: service.rs  service_map.rs  stop.rs  types.rs
datatypes/src/api/types/: farezone.rs  service_mode.rs  stringed_lat_long.rs
datatypes/src/old/: main.rs  routing.rs  service.rs
datatypes/src/py_data/: timetables.rs
datatypes/src/route_resolver/: best_route.rs  stops.rs
datatypes/src/testdata/: route-264.json
map-data/: coast.overpass  internal-water.overpass  roads.overpass
metlink/: __main__.py  route_builder.py  session.py  utils.py
render/: Cargo.toml
resolver/: Cargo.toml
route-builder/: Cargo.toml
route-builder/src/: builder.rs  data_utils.rs  main.rs  utils.rs
route-builder/src/builder/: 236-service.json  30x-service.json  CCL-service.json  stops.json  tests.rs
src/: main.rs  web_mercator.rs
transport-data/: Cargo.toml
transport-data/src/: lib.rs  shared.rs
transport-data/src/api/: mod.rs  service.rs  service_map.rs  stop.rs
transport-data/src/data/: files.rs  mod.rs  route.rs  service.rs  stop.rs  timetable.rs
(+14831 files in other folders)
