[tool.poetry]
name = "metlink-api"
version = "0.1.0"
description = ""
authors = ["Lee Symes <leesdolphin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
SqlAlchemy = "^1.3"
requests = "^2.21"
cachecontrol = {version = "^0.12.5",extras = ["filecache"]}
geojson = "^2.4"

[tool.poetry.dev-dependencies]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
