[tool.poetry]
name = "metlink-api"
version = "0.1.0"
description = ""
authors = ["Opal Symes <code@opal.codes>"]

[tool.poetry.dependencies]
python = "^3.6"
SqlAlchemy = "^1.3"
requests = "^2.21"
cachecontrol = {version = "^0.12.6",extras = ["filecache"]}
simplejson = "^3.16"
pytz = "*"
beautifulsoup4 = "^4.7"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
