[package]
name = "metlink-datatypes"
version = "0.1.0"
authors = ["Lee Symes <leesdolphin@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version ="0.1.0", features = ["serde"] }
rayon = "1.0"
geo = { version ="0.12.1", features = ["serde"] }
num-traits = "0.2.6"
[dev-dependencies]
serde_test = "1.0.90"
