[package]
name = "metlink-route-builder"
version = "0.1.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metlink-transport-data = { path="../transport-data" }
anyhow = "^1.0.26"
rayon = "1.3.0"
chrono = { version = "^0.4.0" }
bigdecimal = { version ="^0.1.0" }
