[package]
name = "metlink-route-builder"
version = "0.1.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metlink-transport-data = { path="../transport-data" }
anyhow = "^1.0.26"
bigdecimal = { version ="^0.1.0" }
chrono = { version = "^0.4.0" }
geojson = "0.17.0"
rayon = "1.3.0"

[dev-dependencies]
serde = {version ="^1.0.104", features =["derive"]}
serde_json = "^1.0.45"
