[package]
name = "metlink-transport-data"
version = "0.1.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

[dependencies]
serde = {version ="^1.0.104", features =["derive"]}
serde_json = "^1.0.45"
chrono = { version = "^0.4.0", features = ["serde"] }
bigdecimal = { version ="^0.1.0", features = ["serde"] }
anyhow = "^1.0.26"

[dev-dependencies]
serde_test = "^1.0.104"
